--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,10 +33,13 @@ select {
   opacity: 1;
 }
 
+html,
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 @theme {
